add more new Classes and add Appointment

--- a/classes.html
+++ b/classes.html
@@ -130,7 +130,7 @@
                             </ul>
                         </p>
                 </div>
-                <div class="row g-4">
+                <div class="row g-4 ">
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="classes-item">
                             <div class="bg-light rounded-circle w-75 mx-auto p-3">
@@ -305,7 +305,7 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="classes-item">
                             <div class="bg-light rounded-circle w-75 mx-auto p-3">
-                                <img class="img-fluid rounded-circle" src="img/classes-3.jpg" alt="">
+                                <img class="img-fluid rounded-circle" src="img/classes-4.jpg" alt="">
                             </div>
                             <div class="bg-light rounded p-4 pt-5 mt-n5">
                                 <a class="d-block text-center h3 mt-3 mb-4">Англійська мова</a>
@@ -351,7 +351,7 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="classes-item">
                             <div class="bg-light rounded-circle w-75 mx-auto p-3">
-                                <img class="img-fluid rounded-circle" src="img/classes-1.jpg" alt="">
+                                <img class="img-fluid rounded-circle" src="img/classes-5.jpg" alt="">
                             </div>
                             <div class="bg-light rounded p-4 pt-5 mt-n5">
                                 <a class="d-block text-center h3 mt-3 mb-4">Курс "Ейдетика"</a>
@@ -406,7 +406,7 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                         <div class="classes-item">
                             <div class="bg-light rounded-circle w-75 mx-auto p-3">
-                                <img class="img-fluid rounded-circle" src="img/classes-1.jpg" alt="">
+                                <img class="img-fluid rounded-circle" src="img/classes-6.jpg" alt="">
                             </div>
                             <div class="bg-light rounded p-4 pt-5 mt-n5">
                                 <a class="d-block text-center h3 mt-3 mb-4" href="">Логопед</a>
@@ -452,7 +452,7 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="classes-item">
                             <div class="bg-light rounded-circle w-75 mx-auto p-3">
-                                <img class="img-fluid rounded-circle" src="img/classes-1.jpg" alt="">
+                                <img class="img-fluid rounded-circle" src="img/classes-7.jpg" alt="">
                             </div>
                             <div class="bg-light rounded p-4 pt-5 mt-n5">
                                 <a class="d-block text-center h3 mt-3 mb-4" href="">Корекція почерку</a>
@@ -497,7 +497,7 @@
                                             <small>до 8 дітей / індивідуально</small>
                                         </div>
                                     </div>
-                                    <button id="programPopupBtn" class="bg-primary text-white rounded-pill py-2 px-3 btn btn-primary py-2 mt-2">
+                                    <button id="handwritingProgramPopupBtn" class="bg-primary text-white rounded-pill py-2 px-3 btn btn-primary py-2 mt-2">
                                         Дізнатись більше про курс <i class="fas fa-book-open ms-2"></i>
                                     </button>
                                 </div>
@@ -507,7 +507,7 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="classes-item">
                             <div class="bg-light rounded-circle w-75 mx-auto p-3">
-                                <img class="img-fluid rounded-circle" src="img/classes-1.jpg" alt="">
+                                <img class="img-fluid rounded-circle" src="img/classes-8.jpg" alt="">
                             </div>
                             <div class="bg-light rounded p-4 pt-5 mt-n5">
                                 <a class="d-block text-center h3 mt-3 mb-4" href="">Швидкочитання</a>
@@ -552,7 +552,7 @@
                                             <small>до 8 дітей / індивідуально</small>
                                         </div>
                                     </div>
-                                    <button id="programPopupBtn" class="bg-primary text-white rounded-pill py-2 px-3 btn btn-primary py-2 mt-2">
+                                    <button id="speedReadingProgramPopupBtn" class="bg-primary text-white rounded-pill py-2 px-3 btn btn-primary py-2 mt-2">
                                         Дізнатись більше про курс <i class="fas fa-book-open ms-2"></i>
                                     </button>
                                 </div>
@@ -562,7 +562,7 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                         <div class="classes-item">
                             <div class="bg-light rounded-circle w-75 mx-auto p-3">
-                                <img class="img-fluid rounded-circle" src="img/classes-1.jpg" alt="">
+                                <img class="img-fluid rounded-circle" src="img/classes-9.jpg" alt="">
                             </div>
                             <div class="bg-light rounded p-4 pt-5 mt-n5">
                                 <a class="d-block text-center h3 mt-3 mb-4" href="">Таблиця множення</a>
@@ -607,7 +607,7 @@
                                             <small>до 8 дітей / індивідуально</small>
                                         </div>
                                     </div>
-                                    <button id="programPopupBtn" class="bg-primary text-white rounded-pill py-2 px-3 btn btn-primary py-2 mt-2">
+                                    <button id="multiplicationProgramPopupBtn" class="bg-primary text-white rounded-pill py-2 px-3 btn btn-primary py-2 mt-2">
                                         Дізнатись більше про курс <i class="fas fa-book-open ms-2"></i>
                                     </button>
                                 </div>
@@ -1088,6 +1088,164 @@
             </div>
         </div>
     </div> 
+
+    <!-- Classes Handwriting Popup Modal -->
+    <div class="modal fade" id="handwritingProgramPopup" tabindex="-1" aria-labelledby="programLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="programLabel">🖊️ "Чарівні літери": Курс корекції почерку для юних талантів!</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>- 🏫 У нашому центрі дитячого розвитку розроблено унікальний курс "Чарівні літери", 
+                        який допоможе вашій дитині перетворити нерівні каракулі на охайний та розбірливий 
+                        почерк, яким можна пишатися!
+                    </p>
+                    <p>📚 Що чекає на вашу дитину на курсі "Чарівні літери":</p>
+
+                    <h6>👩‍🏫 Індивідуальний підхід наших професійних педагогів, які:</h6>
+                    <ul>
+                        <li>🔎 Оцінять особливості письма кожної дитини.</li>
+                        <li>📝 Розроблять персоналізовану програму корекції.</li>
+                        <li>⏳ Врахують темп та потреби кожної дитини.</li>
+                    </ul>
+
+                    <h6>✏️ Формування правильних навичок письма:</h6>
+                    <ul>
+                        <li>✍️ Навчимо дитину правильно тримати ручку.</li>
+                        <li>🤲 Навчимо контролювати натиск, нахил літер.</li>
+                        <li>📐 Навчимо дотримуватися міжрядкових інтервалів.</li>
+                    </ul>
+
+                    <h6>🖐️ Розвиток дрібної моторики:</h6>
+                    <ul>
+                        <li>💪 Вправи для зміцнення м'язів руки.</li>
+                        <li>🔄 Вправи для покращення координації рухів.</li>
+                        <li>✒️ Підготуємо руку до легкого та впевненого письма.</li>
+                    </ul>
+
+                    <h6>🎲 Ігрова форма навчання:</h6>
+                    <ul>
+                        <li>Ми віримо, що навчання має бути захопливим!</li>
+                        <li>🎭 Заняття проходять у формі цікавих ігор та вправ.</li>
+                        <li>🚀 Перетворюємо нудну писанину на веселу пригоду.</li>
+                    </ul>
+
+                    <p>🌟 Дозвольте вашій дитині відчути радість від красивого письма!</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Classes Speed ​​Reading Popup Modal -->
+    <div class="modal fade" id="speedReadingProgramPopup" tabindex="-1" aria-labelledby="programLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="programLabel">📖 Курс "Швидкочитання"</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Наш курс "Швидкочитання" – це не просто про швидкість, 
+                        це про виховання вдумливого читача, здатного критично мислити, 
+                        аналізувати та запам'ятовувати ключові ідеї.
+                    </p>
+                    <p>📚 За лаштунками інтелектуального читання: що ми пропонуємо?</p>
+
+                    <h6>🧠 Наша унікальна методика:</h6>
+                    <ul>
+                        <li>🔍 Поєднує передові когнітивні техніки.</li>
+                        <li>🎮 Елементи гейміфікації та індивідуальний підхід.</li>
+                    </ul>
+
+                    <h6>👀 Нейрогімнастика для очей та мозку:</h6>
+                    <ul>
+                        <li>Вправи, що стимулюють роботу зорової системи.</li>
+                        <li>🧩 Вправи для активізації різних відділів мозку.</li>
+                        <li>📖 Розвиток навичок читання та обробки інформації.</li>
+                    </ul>
+
+                    <h6>🗺️ Техніки ментальних карт та візуалізації:</h6>
+                    <ul>
+                        <li>📝 Навчаємо створювати ефективні "карти пам'яті".</li>
+                        <li>🎨 Використовувати образи для кращого запам'ятовування.</li>
+                    </ul>
+
+                    <h6>💡 Розвиток критичного мислення під час читання:</h6>
+                    <ul>
+                        <li>❓ Вчимо ставити запитання до тексту.</li>
+                        <li>📌 Виділяти головне.</li>
+                        <li>🧮 Аналізувати аргументи.</li>
+                        <li>Робити власні висновки.</li>
+                    </ul>
+
+                    <h6>🎯 Персоналізовані програми розвитку:</h6>
+                    <ul>
+                        <li>⏳ Враховуємо поточний рівень та темп навчання дитини.</li>
+                        <li>Кожна дитина отримує індивідуальні завдання та вправи.</li>
+                    </ul>
+
+                    <p>🌟 Не пропустіть можливість подарувати вашій дитині перевагу на все життя!</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Classes Multiplication Popup Modal -->
+    <div class="modal fade" id="multiplicationProgramPopup" tabindex="-1" aria-labelledby="programLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="programLabel">🧮 Курс "Таблиця множення: Легко та весело!"</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>🧠 Чи пам'ятаєте ви, як важко було вчити таблицю множення? 
+                        Зубрити числа, плутатися, засмучуватися... Ми знаємо, 
+                        як зробити цей процес цікавим, зрозумілим і ефективним!
+                    </p>
+                    <p>Що ми пропонуємо?</p>
+
+                    <h6>📊 Інтерактивні заняття:</h6>
+                    <ul>
+                        <li>Ніякого сухого викладу!</li>
+                        <li>🎮 Ми використовуємо ігри.</li>
+                        <li>🖼️ Візуальні матеріали, сучасні методики.</li>
+                        <li>Кожне заняття динамічне та захопливе.</li>
+                    </ul>
+
+                    <h6>🕹️ Ігрові елементи:</h6>
+                    <ul>
+                        <li>🎯 Навчання через гру.</li>
+                        <li>🧩 Головоломки та математичні квести.</li>
+                        <li>💡 Освоєння таблиці множення швидко і без стресу.</li>
+                    </ul>
+
+                    <h6>📝 Практичні завдання:</h6>
+                    <ul>
+                        <li>Застосування знань у реальних життєвих ситуаціях.</li>
+                        <li>Даємо розуміння, для чого потрібні ці знання.</li>
+                    </ul>
+
+                    <h6>🎓 Цей курс ідеально підходить для:</h6>
+                    <ul>
+                        <li>👦 Школярів молодших класів (1-4 клас).</li>
+                        <li>🤔 Дітей, із труднощами запам'ятовування.</li>
+                        <li>🔢 Усіх, хто хоче зробити математику цікавою.</li>
+                    </ul>
+
+                    <h6>🏆 Пройшовши наш курс, ваша дитина:</h6>
+                    <ul>
+                        <li>Вільно оперуватиме таблицею множення.</li>
+                        <li>Покращить логічне мислення та увагу.</li>
+                    </ul>
+
+                    <p>🌟 З нами математика – це не страшно, а дуже навіть цікаво!</p>
+                </div>
+            </div>
+        </div>
+    </div>
  
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
