--- a/appointment.html
+++ b/appointment.html
@@ -86,12 +86,12 @@
         <!-- Page Header End -->
         <div class="container-xxl py-5 page-header position-relative mb-5">
             <div class="container py-5">
-                <h1 class="display-2 text-white animated slideInDown mb-4">Appointment</h1>
+                <h1 class="display-2 text-white animated slideInDown mb-4">Залиште заявку прямо зараз!</h1>
                 <nav aria-label="breadcrumb animated slideInDown">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                        <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                        <li class="breadcrumb-item text-white active" aria-current="page">Appointment</li>
+                        <li class="breadcrumb-item"><a href="index.html">Головна</a></li>
+                        <li class="breadcrumb-item"><a href="#">Меню</a></li>
+                        <li class="breadcrumb-item text-white active" aria-current="page">Залишити заявку</li>
                     </ol>
                 </nav>
             </div>
@@ -106,47 +106,47 @@
                     <div class="row g-0">
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                             <div class="h-100 d-flex flex-column justify-content-center p-5">
-                                <h1 class="mb-4">Make Appointment</h1>
+                                <h1 class="mb-5">Створити заявку</h1>
                                 <form>
                                     <div class="row g-3">
                                         <div class="col-sm-6">
                                             <div class="form-floating">
-                                                <input type="text" class="form-control border-0" id="gname" placeholder="Gurdian Name">
-                                                <label for="gname">Gurdian Name</label>
+                                                <input type="text" class="form-control border-0" id="gname" placeholder="ПІБ одного з батьків">
+                                                <label for="gname">ПІБ одного з батьків</label>
                                             </div>
                                         </div>
                                         <div class="col-sm-6">
                                             <div class="form-floating">
-                                                <input type="email" class="form-control border-0" id="gmail" placeholder="Gurdian Email">
-                                                <label for="gmail">Gurdian Email</label>
+                                                <input type="email" class="form-control border-0" id="gmail" placeholder="Email одного з батьків">
+                                                <label for="gmail">Email одного з батьків</label>
                                             </div>
                                         </div>
                                         <div class="col-sm-6">
                                             <div class="form-floating">
-                                                <input type="text" class="form-control border-0" id="cname" placeholder="Child Name">
-                                                <label for="cname">Child Name</label>
+                                                <input type="text" class="form-control border-0" id="cname" placeholder="ПІБ дитини">
+                                                <label for="cname">ПІБ дитини</label>
                                             </div>
                                         </div>
                                         <div class="col-sm-6">
                                             <div class="form-floating">
-                                                <input type="text" class="form-control border-0" id="cage" placeholder="Child Age">
-                                                <label for="cage">Child Age</label>
+                                                <input type="text" class="form-control border-0" id="cage" placeholder="Вік дитини">
+                                                <label for="cage">Вік дитини</label>
                                             </div>
                                         </div>
                                         <div class="col-12">
                                             <div class="form-floating">
-                                                <textarea class="form-control border-0" placeholder="Leave a message here" id="message" style="height: 100px"></textarea>
-                                                <label for="message">Message</label>
+                                                <textarea class="form-control border-0" placeholder="Залиште повідомлення тут" id="message" style="height: 250px"></textarea>
+                                                <label for="message">Повідомлення</label>
                                             </div>
                                         </div>
                                         <div class="col-12">
-                                            <button class="btn btn-primary w-100 py-3" type="submit">Submit</button>
+                                            <button class="btn btn-primary w-100 py-3" type="submit">Надіслати</button>
                                         </div>
                                     </div>
                                 </form>
                             </div>
                         </div>
-                        <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px;">
+                        <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" style="min-height: 700px;">
                             <div class="position-relative h-100">
                                 <img class="position-absolute w-100 h-100 rounded" src="img/appointment.jpg" style="object-fit: cover;">
                             </div>
