fix Appointment image responsive

--- a/appointment.html
+++ b/appointment.html
@@ -135,7 +135,7 @@
                                         </div>
                                         <div class="col-12">
                                             <div class="form-floating">
-                                                <textarea class="form-control border-0" placeholder="Залиште повідомлення тут" id="message" style="height: 250px"></textarea>
+                                                <textarea class="form-control border-0" placeholder="Залиште повідомлення тут" id="message" style="height: 20vh"></textarea>
                                                 <label for="message">Повідомлення</label>
                                             </div>
                                         </div>
@@ -146,9 +146,9 @@
                                 </form>
                             </div>
                         </div>
-                        <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" style="min-height: 700px;">
+                        <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" style="min-height: 60vh;">
                             <div class="position-relative h-100">
-                                <img class="position-absolute w-100 h-100 rounded" src="img/appointment.jpg" style="object-fit: cover;">
+                                <img class="position-absolute w-100 h-100 rounded responsive-image" src="img/appointment.jpg">
                             </div>
                         </div>
                     </div>
