--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
                             href="https://www.tiktok.com/@.brainy.kids?_t=ZM-8wD4I3RKgsQ&_r=1"><i class="fab fa-tiktok"></i>
                             </a>
                             <a class="btn btn-outline-light btn-social" 
-                            href="tel:+380966987178"><i class="fab fa-telegram-plane"></i>
+                            href="https://telegram.im/@brainykids_vn"><i class="fab fa-telegram-plane"></i>
                             </a>
                         </div>
                     </div>
@@ -652,7 +652,7 @@
                         <a class="btn btn-social btn-tiktok" href="https://www.tiktok.com/@.brainy.kids?_t=ZM-8wD4I3RKgsQ&_r=1">
                             <i class="fab fa-tiktok"></i>
                         </a>
-                        <a class="btn btn-social btn-telegram" href="https://t.me/+380966987178">
+                        <a class="btn btn-social btn-telegram" href="https://telegram.im/@brainykids_vn">
                             <i class="fab fa-telegram-plane"></i>
                         </a>
                     </div>
