--- a/contact.html
+++ b/contact.html
@@ -86,12 +86,12 @@
         <!-- Page Header End -->
         <div class="container-xxl py-5 page-header position-relative mb-5">
             <div class="container py-5">
-                <h1 class="display-2 text-white animated slideInDown mb-4">Contact Us</h1>
+                <h1 class="display-2 text-white animated slideInDown mb-4">Наші контакти</h1>
                 <nav aria-label="breadcrumb animated slideInDown">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                        <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                        <li class="breadcrumb-item text-white active" aria-current="page">Contact Us</li>
+                        <li class="breadcrumb-item"><a href="index.html">Головна</a></li>
+                        <li class="breadcrumb-item"><a href="#">Меню</a></li>
+                        <li class="breadcrumb-item text-white active" aria-current="page">Контакти</li>
                     </ol>
                 </nav>
             </div>
@@ -103,63 +103,68 @@
         <div class="container-xxl py-5">
             <div class="container">
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                    <h1 class="mb-3">Get In Touch</h1>
-                    <p>Eirmod sed ipsum dolor sit rebum labore magna erat. Tempor ut dolore lorem kasd vero ipsum sit
-                        eirmod sit. Ipsum diam justo sed rebum vero dolor duo.</p>
+                    <h1 class="mb-3">Як з нами зв'язатись</h1>
+                    <p>Маєте запитання або хочете записати малюка на заняття? Зв’яжіться з нами — команда Brainy Kids з радістю допоможе!</p>
                 </div>
                 <div class="row g-4 mb-5">
                     <div class="col-md-6 col-lg-4 text-center wow fadeInUp" data-wow-delay="0.1s">
-                        <div class="bg-light rounded-circle d-inline-flex align-items-center justify-content-center mb-4" style="width: 75px; height: 75px;">
-                            <i class="fa fa-map-marker-alt fa-2x text-primary"></i>
-                        </div>
-                        <h6>123 Street, New York, USA</h6>
+                        <a href="https://www.google.com/maps?q=Пр.+Юності,+14+А,+Вінниця,+Україна" target="_blank" style="text-decoration: none; color: inherit;">
+                            <div class="bg-light rounded-circle d-inline-flex align-items-center justify-content-center mb-4" style="width: 75px; height: 75px;">
+                                <i class="fa fa-map-marker-alt fa-2x text-primary"></i>
+                            </div>
+                            <h6>Пр. Юності, 14 А, Вінниця, Україна</h6>
+                        </a>
                     </div>
                     <div class="col-md-6 col-lg-4 text-center wow fadeInUp" data-wow-delay="0.3s">
-                        <div class="bg-light rounded-circle d-inline-flex align-items-center justify-content-center mb-4" style="width: 75px; height: 75px;">
-                            <i class="fa fa-envelope-open fa-2x text-primary"></i>
-                        </div>
-                        <h6>info@example.com</h6>
+                        <a href="mailto:brainykids.vn@gmail.com" style="text-decoration: none; color: inherit;">
+                            <div class="bg-light rounded-circle d-inline-flex align-items-center justify-content-center mb-4" style="width: 75px; height: 75px;">
+                                <i class="fa fa-envelope-open fa-2x text-primary"></i>
+                            </div>
+                            <h6>brainykids.vn@gmail.com</h6>
+                        </a>
                     </div>
                     <div class="col-md-6 col-lg-4 text-center wow fadeInUp" data-wow-delay="0.5s">
-                        <div class="bg-light rounded-circle d-inline-flex align-items-center justify-content-center mb-4" style="width: 75px; height: 75px;">
-                            <i class="fa fa-phone-alt fa-2x text-primary"></i>
-                        </div>
-                        <h6>+012 345 6789</h6>
+                        <a href="tel:+380966987178" style="text-decoration: none; color: inherit;">
+                            <div class="bg-light rounded-circle d-inline-flex align-items-center justify-content-center mb-4" style="width: 75px; height: 75px;">
+                                <i class="fa fa-phone-alt fa-2x text-primary"></i>
+                            </div>
+                            <h6>+38 096 698 71 78</h6>
+                        </a>
                     </div>
                 </div>
                 <div class="bg-light rounded">
                     <div class="row g-0">
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
                             <div class="h-100 d-flex flex-column justify-content-center p-5">
-                                <p class="mb-4">The contact form is currently inactive. Get a functional and working contact form with Ajax & PHP in a few minutes. Just copy and paste the files, add a little code and you're done. <a href="https://htmlcodex.com/contact-form">Download Now</a>.</p>
+                                <p class="mb-4">Напишіть нам - будемо раді відповісти на всі запитання!</p>
                                 <form>
                                     <div class="row g-3">
                                         <div class="col-sm-6">
                                             <div class="form-floating">
-                                                <input type="text" class="form-control border-0" id="name" placeholder="Your Name">
-                                                <label for="name">Your Name</label>
+                                                <input type="text" class="form-control border-0" id="name" placeholder="Ваше ім'я">
+                                                <label for="name">Ваше ім'я</label>
                                             </div>
                                         </div>
                                         <div class="col-sm-6">
                                             <div class="form-floating">
-                                                <input type="email" class="form-control border-0" id="email" placeholder="Your Email">
-                                                <label for="email">Your Email</label>
+                                                <input type="email" class="form-control border-0" id="email" placeholder="Email">
+                                                <label for="email">Email</label>
                                             </div>
                                         </div>
                                         <div class="col-12">
                                             <div class="form-floating">
-                                                <input type="text" class="form-control border-0" id="subject" placeholder="Subject">
-                                                <label for="subject">Subject</label>
+                                                <input type="text" class="form-control border-0" id="subject" placeholder="Тема">
+                                                <label for="subject">Тема</label>
                                             </div>
                                         </div>
                                         <div class="col-12">
                                             <div class="form-floating">
-                                                <textarea class="form-control border-0" placeholder="Leave a message here" id="message" style="height: 100px"></textarea>
-                                                <label for="message">Message</label>
+                                                <textarea class="form-control border-0" placeholder="Текст повідомлення" id="message" style="height: 100px"></textarea>
+                                                <label for="message">Текст повідомлення</label>
                                             </div>
                                         </div>
                                         <div class="col-12">
-                                            <button class="btn btn-primary w-100 py-3" type="submit">Send Message</button>
+                                            <button class="btn btn-primary w-100 py-3" type="submit">Надіслати</button>
                                         </div>
                                     </div>
                                 </form>
@@ -167,10 +172,9 @@
                         </div>
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px;">
                             <div class="position-relative h-100">
-                                <iframe class="position-relative rounded w-100 h-100"
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
-                                frameborder="0" style="min-height: 400px; border:0;" allowfullscreen="" aria-hidden="false"
-                                tabindex="0"></iframe>
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2605.5163300909776!2d28.407849476485833!3d49.22869917138478!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x472d5c5cd8bb70b9%3A0xa0098b19a6abfade!2z0L_RgNC-0YHQvy4g0K7QvdC-0YHRgtC4LCAxNNCQLCDQktC40L3QvdC40YbQsCwg0JLQuNC90L3QuNGG0LrQsNGPINC-0LHQu9Cw0YHRgtGMLCAyMTAwMA!5e0!3m2!1sru!2sua!4v1748698270947!5m2!1sru!2sua" 
+                                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                                </iframe>
                             </div>
                         </div>
                     </div>
@@ -244,13 +248,13 @@
                             <div class="col-4">
                                 <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-6.jpg" onclick="openModal(5)" alt="Brainy Kids/gallery_06">
                             </div>
-                            <div class="col-4" style="visibility: hidden;">
+                            <div class="col-4" style="display: none;">
                                 <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-7.jpg" onclick="openModal(6)" alt="Brainy Kids/gallery_07">
                             </div>
-                            <div class="col-4" style="visibility: hidden;">
+                            <div class="col-4" style="display: none;">
                                 <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-8.jpg" onclick="openModal(7)" alt="Brainy Kids/gallery_08">
                             </div>
-                            <div class="col-4" style="visibility: hidden;">
+                            <div class="col-4" style="display: none;">
                                 <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-9.jpg" onclick="openModal(8)" alt="Brainy Kids/gallery_09">
                             </div>
                         </div>
