--- a/testimonial.html
+++ b/testimonial.html
@@ -86,12 +86,12 @@
         <!-- Page Header End -->
         <div class="container-xxl py-5 page-header position-relative mb-5">
             <div class="container py-5">
-                <h1 class="display-2 text-white animated slideInDown mb-4">Testimonial</h1>
+                <h1 class="display-2 text-white animated slideInDown mb-4">Відгуки</h1>
                 <nav aria-label="breadcrumb animated slideInDown">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                        <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                        <li class="breadcrumb-item text-white active" aria-current="page">Testimonial</li>
+                        <li class="breadcrumb-item"><a href="index.html">Головна</a></li>
+                        <li class="breadcrumb-item"><a href="#">Меню</a></li>
+                        <li class="breadcrumb-item text-white active" aria-current="page">Відгуки</li>
                     </ol>
                 </nav>
             </div>
@@ -103,8 +103,11 @@
         <div class="container-xxl py-5">
             <div class="container">
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                    <h1 class="mb-3">Our Clients Say!</h1>
-                    <p>Eirmod sed ipsum dolor sit rebum labore magna erat. Tempor ut dolore lorem kasd vero ipsum sit eirmod sit. Ipsum diam justo sed rebum vero dolor duo.</p>
+                    <h1 class="mb-3">Відгуки наших учнів та батьків</h1>
+                    <p>Наші заняття надихають дітей на нові досягнення та дарують радість навчання. 
+                        Батьки відзначають прогрес у знаннях і впевненість, яку набувають малюки. 
+                        Кожна історія — це маленька перемога на шляху до великих знань!
+                    </p>
                 </div>
                 <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
                     <div class="testimonial-item bg-light rounded p-5">
@@ -210,13 +213,13 @@
                             <div class="col-4">
                                 <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-6.jpg" onclick="openModal(5)" alt="Brainy Kids/gallery_06">
                             </div>
-                            <div class="col-4" style="visibility: hidden;">
+                            <div class="col-4" style="display: none;">
                                 <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-7.jpg" onclick="openModal(6)" alt="Brainy Kids/gallery_07">
                             </div>
-                            <div class="col-4" style="visibility: hidden;">
+                            <div class="col-4" style="display: none;">
                                 <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-8.jpg" onclick="openModal(7)" alt="Brainy Kids/gallery_08">
                             </div>
-                            <div class="col-4" style="visibility: hidden;">
+                            <div class="col-4" style="display: none;">
                                 <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-9.jpg" onclick="openModal(8)" alt="Brainy Kids/gallery_09">
                             </div>
                         </div>
