--- a/appointment.html
+++ b/appointment.html
@@ -222,13 +222,13 @@
                             <div class="col-4">
                                 <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-6.jpg" onclick="openModal(5)" alt="Brainy Kids/gallery_06">
                             </div>
-                            <div class="col-4" style="visibility: hidden;">
+                            <div class="col-4" style="display: none;">
                                 <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-7.jpg" onclick="openModal(6)" alt="Brainy Kids/gallery_07">
                             </div>
-                            <div class="col-4" style="visibility: hidden;">
+                            <div class="col-4" style="display: none;">
                                 <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-8.jpg" onclick="openModal(7)" alt="Brainy Kids/gallery_08">
                             </div>
-                            <div class="col-4" style="visibility: hidden;">
+                            <div class="col-4" style="display: none;">
                                 <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-9.jpg" onclick="openModal(8)" alt="Brainy Kids/gallery_09">
                             </div>
                         </div>
