--- a/index.html
+++ b/index.html
@@ -481,7 +481,8 @@
             <div class="container">
                 <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                     <h1 class="mb-3">Відгуки наших учнів та батьків</h1>
-                    <p>Наші заняття надихають дітей на нові досягнення та дарують радість навчання. Батьки відзначають прогрес у знаннях і впевненість, яку набувають малюки. 
+                    <p>Наші заняття надихають дітей на нові досягнення та дарують радість навчання. 
+                        Батьки відзначають прогрес у знаннях і впевненість, яку набувають малюки. 
                         Кожна історія — це маленька перемога на шляху до великих знань!
                     </p>
                 </div>
@@ -589,13 +590,13 @@
                             <div class="col-4">
                                 <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-6.jpg" onclick="openModal(5)" alt="Brainy Kids/gallery_06">
                             </div>
-                            <div class="col-4" style="visibility: hidden;">
+                            <div class="col-4" style="display: none;">
                                 <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-7.jpg" onclick="openModal(6)" alt="Brainy Kids/gallery_07">
                             </div>
-                            <div class="col-4" style="visibility: hidden;">
+                            <div class="col-4" style="display: none;">
                                 <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-8.jpg" onclick="openModal(7)" alt="Brainy Kids/gallery_08">
                             </div>
-                            <div class="col-4" style="visibility: hidden;">
+                            <div class="col-4" style="display: none;">
                                 <img class="img-fluid rounded bg-light p-1 footer-galery-item" src="img/classes-9.jpg" onclick="openModal(8)" alt="Brainy Kids/gallery_09">
                             </div>
                         </div>
