--- a/contact.html
+++ b/contact.html
@@ -172,7 +172,8 @@
                         </div>
                         <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" style="min-height: 400px;">
                             <div class="position-relative h-100">
-                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2605.5163300909776!2d28.407849476485833!3d49.22869917138478!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x472d5c5cd8bb70b9%3A0xa0098b19a6abfade!2z0L_RgNC-0YHQvy4g0K7QvdC-0YHRgtC4LCAxNNCQLCDQktC40L3QvdC40YbQsCwg0JLQuNC90L3QuNGG0LrQsNGPINC-0LHQu9Cw0YHRgtGMLCAyMTAwMA!5e0!3m2!1sru!2sua!4v1748698270947!5m2!1sru!2sua" 
+                                <iframe class="position-relative rounded w-100 h-100" 
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2605.5163300909776!2d28.407849476485833!3d49.22869917138478!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x472d5c5cd8bb70b9%3A0xa0098b19a6abfade!2z0L_RgNC-0YHQvy4g0K7QvdC-0YHRgtC4LCAxNNCQLCDQktC40L3QvdC40YbQsCwg0JLQuNC90L3QuNGG0LrQsNGPINC-0LHQu9Cw0YHRgtGMLCAyMTAwMA!5e0!3m2!1sru!2sua!4v1748698270947!5m2!1sru!2sua" 
                                     width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                                 </iframe>
                             </div>
